[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
bitcoin = { version = "0.32.2", features = ["rand-std"] }
hex = "0.4.3"
getrandom = { version = "0.2", features = ["js"] }
